# platform.core.telephony.tel-plugin-atmodem

./: CMakeLists.txt  tel-plugin-atmodem.manifest
debian/: changelog  control  rules  tel-plugin-atmodem.postinst
include/: at_tok.h  atchannel.h  atmodem_call.h  atmodem_common.h  atmodem_modem.h  atmodem_network.h  atmodem_ps.h  atmodem_sim.h  atmodem_sms.h  atmodem_ss.h  s_call.h  s_common.h  s_modem.h  s_network.h  s_ps.h  s_sim.h  s_sms.h  s_ss.h
packaging/: tel-plugin-atmodem.spec
reference_src/include/: atchannel.h  s_call.h  s_sim.h  s_ss.h
reference_src/src/: at_tok.c  desc_at.c  s_call.c  s_modem.c  s_network.c  s_sim.c  s_sms.c  s_ss.c
res/: convert_to_sql.c  wiki_mcc_mnc_oper_list.sql
src/: at_tok.c  atchannel.c  atmodem_call.c  atmodem_common.c  atmodem_modem.c  atmodem_network.c  atmodem_ps.c  atmodem_sim.c  atmodem_sms.c  atmodem_ss.c  desc_at.c  desc_atmodem.c  s_call.c  s_common.c  s_modem.c  s_network.c  s_ps.c  s_sim.c  s_sms.c  s_ss.c
